# tg_id_scraper

./: .gitignore  README.md  config.py  input.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: parse.yml
docs/: index.html
examples/: run_example.py  sample.txt
output/: .gitkeep  changes.txt  metadata.json  telegram_ids.json  telegram_ids.py  telegram_ids.txt  telegram_ids.txt.intermediate
parser/: __init__.py  async_utils.py  core.py  extractors.py  utils.py  validators.py
tests/: test_core.py  test_extractors.py  test_integration.py  test_utils.py
