[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_id_scraper"
version = "2.0.0"
description = "Parser for extracting Telegram IDs from subscription links"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
    "urllib3>=2.2.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
tg_id_scraper = "main:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=parser --cov-report=term-missing"
testpaths = ["tests"]
